[package]
name = "muzzman-daemon"
description = "MuzzMan Daemon Session"
version = "0.0.8"
edition = "2021"
authors = ["konkitoman"]
repository = "https://github.com/ManStudio/MuzzMan-Daemon"
license = "MPL-2.0"
keywords = ["muzzman-session"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
[[example]]
name = "get_location_info"
path = "./examples/get_location_info.rs"

[[example]]
name = "get_version"
path = "./examples/get_version.rs"

[[example]]
name = "save_and_loading"
path = "./examples/save_and_loading.rs"

[profile.dev.build-override]
debug = true

[dependencies]
bytes-kman = "0.1"
# muzzman-lib = "0.3.5"
muzzman-lib = {path = "../muzzman-lib"}
dirs = "4.0.0"
polling = "2.5.2"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
serde_json="1.0"
